--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <%= csrf_meta_tag %>
   <%= content_for?(:head) ? yield(:head) : '' %>
-
+  <%= favicon_link_tag "favicon.ico" %>
 </head>
 <body class="<%= bodytag_class %>">
   <div id="header">
