--- a/app/views/flex_reports/_totals.html.erb
+++ b/app/views/flex_reports/_totals.html.erb
@@ -1,16 +1,16 @@
 <% short_name = short_group_name(row,group_fields) %>
 <% row = ReportRow.sum(row, nil, @report.fields) %>
 <% totals_class = (group_fields.size >= 3 || (defined?(grand_total) && grand_total)) ? "sum-totals" : "totals" %>
-<% content_tag :tr, :class => "#{row_classes.join(' ')} #{totals_class}"  do %>
+<%= content_tag :tr, :class => "#{row_classes.join(' ')} #{totals_class}"  do %>
   <% if defined?(grand_total) && grand_total %>
-    <% content_tag :td, :colspan => group_fields.size + 1 do %>
+    <%= content_tag :td, :colspan => group_fields.size + 1 do %>
       Grand Total
     <% end %>
   <% else %>
     <% (report_group_fields.size - group_fields.size + 1).times do %>
       <td class="indent">&nbsp;</td>
     <% end %>
-    <% content_tag :td, :colspan => group_fields.size do %>
+    <%= content_tag :td, :colspan => group_fields.size do %>
       <% if short_name.present? %>
         <%= short_name %>
       <% else %>
