Flex reports: add ability to update report view
Non-admin users can now update a flex reports columns
grouping and date range from the show page. Updates
are not saved to the report definition.

--- a/app/views/flex_reports/_group_header.html.erb
+++ b/app/views/flex_reports/_group_header.html.erb
@@ -13,7 +13,7 @@
       <% if group_name(row,group_fields).present? %> 
         <%= group_name(row,group_fields) %>
       <% else %>
-        <%= report_group_fields[report_group_fields.size - group_fields.size].titleize %> Not Specified
+        <%= FlexReport::GroupMappings[report_group_fields[report_group_fields.size - group_fields.size]] %> Not Specified
       <% end %>
     <% end %>
   <% end %>
