--- a/app/views/flex_reports/show.html.erb
+++ b/app/views/flex_reports/show.html.erb
@@ -16,9 +16,23 @@
   <a href="#" id="collapse-all" class="collapse no-print">Collapse All</a>
   <span class="separator no-print">|</span>
   <a href="#" id="expand-all" class="expand no-print">Expand All</a>
+  <span class="separator no-print">|</span>
+  <a href="#" id="show-update-form" class="no-print">Update View</a>
 </div>
 
 <%= content_tag(:div, @report.subtitle, :id => "report-description") if @report.subtitle.present? %>
 <%= content_tag(:div, "Grouping: #{group_by_label(@report.group_fields)}", :id => "grouping-description") if @report.group_fields.present? %>
+
+<%= form_for @report, :html => {:class => 'run-report', :method => :get, :style => "display:none;"} do |f| %>
+  <fieldset class="no-print">
+    <%= render 'grouping' %>
+    <%= render 'columns' %>
+    <%= render 'date_range', :f => f %>
+    <div class="actions">
+      <%= f.submit "Update View" %>
+      <%= f.submit "Export as CSV", :name => "csv" %>
+    </div>
+  </fieldset>
+<% end %>
 
 <%= render "report", :results => @report.results, :group_fields => @report.group_fields %>
