--- a/app/views/flex_reports/_form.html.erb
+++ b/app/views/flex_reports/_form.html.erb
@@ -14,27 +14,7 @@
           <%= f.collection_select :report_category_id, ReportCategory.default_order, :id, :name, :include_blank => true %>
         </li>
         <li>
-          <h2 class="section-header">Grouping</h2>
-          <select id="group-by" name="flex_report[group_by]">
-            <% @group_bys.each do |fields| %>
-              <%= group_by_option_tag fields %>
-            <% end %>
-            <option value="">Define Custom Grouping...</option>
-          </select>
-
-          <div style="display:none;" id="group-by-custom-section">
-            <p><strong>Select fields to group by:</strong></p>
-            <span id="group-by-custom-wrapper">
-              <span class="template">
-                <select>
-                  <% FlexReport::GroupMappings.sort_by{|k,v| v }.each do |key,value| %>
-                    <%= content_tag :option, value, :value => key %>
-                  <% end %>
-                </select>
-              </span>
-            </span>
-            <p><a href="#" class="add">Add New Group Field</a></p>
-          </div>
+          <%= render :partial => 'grouping' %>
         </li>
       </ol>
       <ol class="section second">
@@ -89,150 +69,8 @@
       </li>
     </ol>
 
-    <div id="report-fields-to-include" class="selfclear">
-      <h2 class="section-header">Columns to Include</h2>
-      <div id="report-checkbox-area">
-        <ol>
-          <li>
-            <input type="checkbox" <%= checked?("funds") %> name="flex_report[fields[funds]]" id="funds" value="1" /> 
-            <label for="funds">RC Funds</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("agency_other") %> name="flex_report[fields[agency_other]]" id="agency_other" value="1" /> 
-            <label for="agency_other">Agency Other</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("vehicle_maint") %> name="flex_report[fields[vehicle_maint]]" id="vehicle_maint" value="1" /> 
-            <label for="vehicle_maint">Vehicle Maint.</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("operations") %> name="flex_report[fields[operations]]" id="operations" value="1" /> 
-            <label for="operations">Operations</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("administrative") %> name="flex_report[fields[administrative]]" id="administrative" value="1" /> 
-            <label for="administrative">Administrative</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("donations") %> name="flex_report[fields[donations]]" id="donations" value="1" /> 
-            <label for="donations">Donations</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("total") %> name="flex_report[fields[total]]" id="total" value="1" /> 
-            <label for="total">Total Funds</label>
-          </li>
-        </ol>
-        <ol>
-          <li>
-            <input type="checkbox" <%= checked?("in_district_trips") %> name="flex_report[fields[in_district_trips]]" id="in_district_trips" value="1" /> 
-            <label for="in_district_trips">In District Trips</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("out_of_district_trips") %> name="flex_report[fields[out_of_district_trips]]" id="out_of_district_trips" value="1" /> 
-            <label for="out_of_district_trips">Out of District Trips</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("customer_trips") %> name="flex_report[fields[customer_trips]]" id="customer_trips" value="1" /> 
-            <label for="customer_trips">Customer Trips</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("guest_and_attendant_trips") %> name="flex_report[fields[guest_and_attendant_trips]]" id="guest_and_attendant_trips" value="1" /> 
-            <label for="guest_and_attendant_trips">Guest and Attendant Trips</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("total_trips") %> name="flex_report[fields[total_trips]]" id="total_trips" value="1" /> 
-            <label for="total_trips">Total Trips</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("total_last_year") %> name="flex_report[fields[total_last_year]]" id="total_last_year" value="1" /> 
-            <label for="total_last_year">Total this Period Last Year</label>
-          </li>
-        </ol>
-        <ol>
-          <li>
-            <input type="checkbox" <%= checked?("mileage") %> name="flex_report[fields[mileage]]" id="mileage" value="1" /> 
-            <label for="mileage">Mileage</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("driver_volunteer_hours") %> name="flex_report[fields[driver_volunteer_hours]]" id="driver_volunteer_hours" value="1" /> 
-            <label for="driver_volunteer_hours">Volunteer Driver Hours</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("driver_paid_hours") %> name="flex_report[fields[driver_paid_hours]]" id="driver_paid_hours" value="1" /> 
-            <label for="driver_paid_hours">Paid Driver Hours</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("driver_total_hours") %> name="flex_report[fields[driver_total_hours]]" id="driver_total_hours" value="1" /> 
-            <label for="driver_total_hours">Total Driver Hours</label>
-          </li>
-        </ol>
-        <ol>
-          <li>
-            <input type="checkbox" <%= checked?("cost_per_trip") %> name="flex_report[fields[cost_per_trip]]" id="cost_per_trip" value="1" /> 
-            <label for="cost_per_trip">Cost/Trip</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("cost_per_customer") %> name="flex_report[fields[cost_per_customer]]" id="cost_per_customer" value="1" /> 
-            <label for="cost_per_customer">Cost/Cust</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("cost_per_mile") %> name="flex_report[fields[cost_per_mile]]" id="cost_per_mile" value="1" /> 
-            <label for="cost_per_mile">Cost/Mile</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("cost_per_hour") %> name="flex_report[fields[cost_per_hour]]" id="cost_per_hour" value="1" /> 
-            <label for="cost_per_hour">Cost/Hour</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("miles_per_ride") %> name="flex_report[fields[miles_per_ride]]" id="miles_per_ride" value="1" /> 
-            <label for="miles_per_ride">Miles/Trip</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("miles_per_customer") %> name="flex_report[fields[miles_per_customer]]" id="miles_per_customer" value="1" /> 
-            <label for="miles_per_customer">Miles/Cust</label>
-          </li>
-        </ol>
-        <ol>
-          <li>
-            <input type="checkbox" <%= checked?("turn_downs") %> name="flex_report[fields[turn_downs]]" id="turn_downs" value="1" /> 
-            <label for="turn_downs">Turn Downs</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("undup_riders") %> name="flex_report[fields[undup_riders]]" id="undup_riders" value="1" /> 
-            <label for="undup_riders">Undup Riders</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("escort_volunteer_hours") %> name="flex_report[fields[escort_volunteer_hours]]" id="escort_volunteer_hours" value="1" /> 
-            <label for="escort_volunteer_hours">Volunteer Escort Hours</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("admin_volunteer_hours") %> name="flex_report[fields[admin_volunteer_hours]]" id="admin_volunteer_hours" value="1" /> 
-            <label for="admin_volunteer_hours">Volunteer Admin Hours</label>
-          </li>
-          <li>
-            <input type="checkbox" <%= checked?("total_volunteer_hours") %> name="flex_report[fields[total_volunteer_hours]]" id="total_volunteer_hours" value="1" /> 
-            <label for="total_volunteer_hours">Total Non-Driver Volunteer Hours</label>
-          </li>
-        </ol>
-      </div>
-      <h2 class="section-header" id="date-range-header">Date Range</h2>
-      <div id="report-date-range-area">
-        <ol class="section">
-          <li>
-            <%= f.label :start_date %>
-            <%= f.date_select :start_date, :start_year => 2012, :end_year => Time.now.year, :order => [:month, :year] %>
-          </li>
-          <li>
-            <%= f.label :end_date %>
-            <%= f.date_select :end_date, :start_year => 2012, :end_year => Time.now.year, :order => [:month, :year] %>
-          </li>
-          <li>
-            <%= f.check_box :pending %>
-            <%= f.label :pending, "Include pending" %>
-          </li>
-        </ol>
-      </div>
-    </div>
+    <%= render 'columns' %>
+    <%= render 'date_range', :f => f %>
 
     <% if current_user.is_admin %>
       <div class="actions">
