--- a/app/views/flex_reports/_totals.html.erb
+++ b/app/views/flex_reports/_totals.html.erb
@@ -14,7 +14,7 @@
       <% if short_name.present? %>
         <%= short_name %>
       <% else %>
-        <%= "#{report_group_fields[report_group_fields.size - group_fields.size].titleize} Not Specified" %>
+        <%= FlexReport::GroupMappings[report_group_fields[report_group_fields.size - group_fields.size]] %> Not Specified
       <% end %>
       Total
     <% end %>
