Flex Reports: add ability to select or unselect
all checkboxes for columns to include.

--- a/app/views/flex_reports/_columns.html.erb
+++ b/app/views/flex_reports/_columns.html.erb
@@ -1,5 +1,9 @@
 <div id="report-fields-to-include" class="selfclear">
-  <h2 class="section-header">Columns to Include</h2>
+  <div class="column-select">
+    <h2 class="section-header">Columns to Include</h2>
+    <a href="#" id="select-all-columns">Select All</a>
+    <a href="#" id="unselect-all-columns">Unselect All</a>
+  </div>
   <div id="report-checkbox-area">
     <ol>
       <li>
