--- a/app/views/shared/_related_allocations.html.erb
+++ b/app/views/shared/_related_allocations.html.erb
@@ -9,7 +9,7 @@
   <% end %>
 </h2>
 <ul>
-  <% target.each do |a| %>
+  <% target.sort_by{|x| x.name}.each do |a| %>
     <li><%= link_to a.name, [:edit, a] %></li>
   <% end %>
 </ul>
