Fix capitalization error: Trimet > TriMet

--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -180,7 +180,7 @@
 <div class="predefined-report" data-name="monthly">
   <%= form_for @query, :html => { :class => "run-report", :method => 'get' }, :url => { :action => :trimet_export } do |f| %>
     <fieldset>
-      <h2 class="report-header">Trimet E&D Export</h2>
+      <h2 class="report-header">TriMet E&D Export</h2>
       <p></p>
       <ol>
         <li>
