Added audit report for TriMet E&D export
Involved an attempt at more elegent handling of
separating E&D trips and costs.

--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -189,6 +189,7 @@
         </li>
       </ol>
       <input type="submit" name="output" value="CSV">
+      <input type="submit" name="output" value="Audit">
     </fieldset>
   <% end %>
 </div>
