Predefined repprts: Change quarterly narrative
Update default date range to start at the beginning of the fiscal year
and end the month prior to the current month.

--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -101,7 +101,7 @@
 </div>
 
 <div class="predefined-report" data-name="monthly">
-  <%= form_for @quarterly_query, :html => { :class => "run-report", :method => 'get' }, :url => { :action => :quarterly_narrative } do |f| %>
+  <%= form_for @fiscal_year_to_date_query, :html => { :class => "run-report", :method => 'get' }, :url => { :action => :quarterly_narrative } do |f| %>
     <fieldset>
       <h2 class="report-header">Quarterly Narrative Report</h2>
       <p></p>
