--- a/app/views/flex_reports/_totals.html.erb
+++ b/app/views/flex_reports/_totals.html.erb
@@ -2,7 +2,11 @@
 <% row = ReportRow.sum(row, nil, @report.fields) %>
 <% totals_class = (group_fields.size >= 3 || (defined?(grand_total) && grand_total)) ? "sum-totals" : "totals" %>
 <%= content_tag :tr, :class => "#{row_classes.join(' ')} #{totals_class}"  do %>
-  <% if defined?(grand_total) && grand_total %>
+  <% if defined?(total_label) %>
+    <%= content_tag :td, :colspan => group_fields.size + 1 do %>
+      <%= total_label %>
+    <% end %>
+  <% elsif defined?(grand_total) && grand_total %>
     <%= content_tag :td, :colspan => group_fields.size + 1 do %>
       Grand Total
     <% end %>
