--- a/app/views/predefined_reports/quarterly_narrative.html.erb
+++ b/app/views/predefined_reports/quarterly_narrative.html.erb
@@ -2,8 +2,8 @@
   <h1>Quarterly Narrative Report</h1>
 </div>
 
-<% @report.results.sort_by {|k,v| row_sort(k)}.each do |reporting_agency, reporting_agency_rows| %>
-  <% reporting_agency_rows.sort_by {|k,v| row_sort(k)}.each do |program, program_rows| %>
+<% @report.results.sort_by {|k,v| row_sort(k.try(:name))}.each do |reporting_agency, reporting_agency_rows| %>
+  <% reporting_agency_rows.sort_by {|k,v| row_sort(k.try(:name))}.each_with_index do |(program, program_rows),index| %>
     <% allocation = get_row(program_rows).allocation %>
     <h2>
       <%= allocation.reporting_agency_name %> &mdash; 
@@ -15,6 +15,24 @@
 
     <%= render "flex_reports/report", :results => program_rows, :group_fields => @report.group_fields[2..-1] %>
 
+    <% if index == reporting_agency_rows.size - 1 %>
+      <hr style="page-break-after: always;"/>
+      <h2>
+        <%= allocation.reporting_agency_name %> &mdash; 
+        <%= describe_date_range(@report.start_date, @report.end_date + 1.month - 1.day) %> &mdash; All Programs
+      </h2>
+      <div class="report-wrapper">
+        <table>
+          <%= render "flex_reports/header", :report_group_fields => [] %>
+          <tbody>
+            <%= render 'flex_reports/totals', 
+                :row => reporting_agency_rows, :report_group_fields => [], :group_fields => [], 
+                :grand_total => true, :row_classes => [], :total_label => "Total All Programs" %>
+          </tbody>
+        </table>
+      </div>
+    <% end %>
     <hr style="page-break-after: always;"/>
   <% end %>
+
 <% end %>
