--- a/app/views/predefined_reports/quarterly_narrative.html.erb
+++ b/app/views/predefined_reports/quarterly_narrative.html.erb
@@ -12,27 +12,12 @@
     <h3>Program: <%= allocation.program.try(:name) || "Unspecified Program" %></h3>
     <h3>County: <%= allocation.county %></h3>
     <h3>Funding Source: <%= allocation.funding_source %></h3>
-
     <%= render "flex_reports/report", :results => program_rows, :group_fields => @report.group_fields[2..-1] %>
-
-    <% if index == reporting_agency_rows.size - 1 %>
-      <hr style="page-break-after: always;"/>
-      <h2>
-        <%= allocation.reporting_agency_name %> &mdash; 
-        <%= describe_date_range(@report.start_date, @report.end_date + 1.month - 1.day) %> &mdash; All Programs
-      </h2>
-      <div class="report-wrapper">
-        <table>
-          <%= render "flex_reports/header", :report_group_fields => [] %>
-          <tbody>
-            <%= render 'flex_reports/totals', 
-                :row => reporting_agency_rows, :report_group_fields => [], :group_fields => [], 
-                :grand_total => true, :row_classes => [], :total_label => "Total All Programs" %>
-          </tbody>
-        </table>
-      </div>
-    <% end %>
     <hr style="page-break-after: always;"/>
   <% end %>
-
+  <h2>
+    <%= reporting_agency %> &mdash; 
+    <%= describe_date_range(@report.start_date, @report.end_date + 1.month - 1.day) %> &mdash; All Programs
+  </h2>
+  <%= render "flex_reports/report", :results => @summary_report.results[reporting_agency], :group_fields => @summary_report.group_fields[1..-1] %>
 <% end %>
