--- a/app/views/predefined_reports/quarterly_narrative.html.erb
+++ b/app/views/predefined_reports/quarterly_narrative.html.erb
@@ -10,7 +10,7 @@
       <%= describe_date_range(@report.start_date, @report.end_date + 1.month - 1.day) %>
     </h2>
     <h3>Program: <%= allocation.program.try(:name) || "Unspecified Program" %></h3>
-    <h3>County: <%= allocation.county %></h3>
+    <h3>Counties: <%= agency_program_counties(allocation.reporting_agency_id, allocation.program_id) %></h3>
     <h3>Funding Source: <%= allocation.funding_source %></h3>
     <%= render "flex_reports/report", :results => program_rows, :group_fields => @report.group_fields[2..-1] %>
     <hr style="page-break-after: always;"/>
@@ -19,5 +19,7 @@
     <%= reporting_agency %> &mdash; 
     <%= describe_date_range(@report.start_date, @report.end_date + 1.month - 1.day) %> &mdash; All Programs
   </h2>
-  <%= render "flex_reports/report", :results => @summary_report.results[reporting_agency], :group_fields => @summary_report.group_fields[1..-1] %>
+  <%= render "flex_reports/report", 
+      :results => @summary_report.results[reporting_agency], 
+      :group_fields => @summary_report.group_fields[1..-1] %>
 <% end %>
