--- a/app/views/predefined_reports/quarterly_narrative.html.erb
+++ b/app/views/predefined_reports/quarterly_narrative.html.erb
@@ -3,17 +3,19 @@
 </div>
 
 <% @report.results.sort_by {|k,v| row_sort(k.try(:name))}.each do |reporting_agency, reporting_agency_rows| %>
-  <% reporting_agency_rows.sort_by {|k,v| row_sort(k.try(:name))}.each_with_index do |(program, program_rows),index| %>
-    <% allocation = get_row(program_rows).allocation %>
-    <h2>
-      <%= allocation.reporting_agency_name %> &mdash; 
-      <%= describe_date_range(@report.start_date, @report.end_date + 1.month - 1.day) %>
-    </h2>
-    <h3>Program: <%= allocation.program.try(:name) || "Unspecified Program" %></h3>
-    <h3>Counties: <%= agency_program_counties(allocation.reporting_agency_id, allocation.program_id) %></h3>
-    <h3>Funding Source: <%= allocation.funding_source %></h3>
-    <%= render "flex_reports/report", :results => program_rows, :group_fields => @report.group_fields[2..-1] %>
-    <hr style="page-break-after: always;"/>
+  <% reporting_agency_rows.sort_by {|k,v| row_sort(k.try(:name))}.each do |program, program_rows| %>
+    <% program_rows.sort_by {|k,v| row_sort(k)}.each do |county, county_rows| %>
+      <% allocation = get_row(county_rows).allocation %>
+      <h2>
+        <%= allocation.reporting_agency_name %> &mdash; 
+        <%= describe_date_range(@report.start_date, @report.end_date + 1.month - 1.day) %>
+      </h2>
+      <h3>Program: <%= allocation.program.try(:name) || "Unspecified Program" %></h3>
+      <h3>County: <%= allocation.county || "Unspecified County" %></h3>
+      <h3>Funding Sources: <%= quarterly_report_funding_sources(allocation.reporting_agency_id,allocation.program_id,allocation.county) %></h3>
+      <%= render "flex_reports/report", :results => county_rows, :group_fields => @report.group_fields[3..-1] %>
+      <hr style="page-break-after: always;"/>
+    <% end %>
   <% end %>
   <h2>
     <%= reporting_agency %> &mdash; 
