--- a/app/views/flex_reports/_nested_rows.html.erb
+++ b/app/views/flex_reports/_nested_rows.html.erb
@@ -8,19 +8,19 @@
     <% next_level_row_group_classes = (row_classes + this_row_group_class) %>
     <%= render 'flex_reports/group_header', 
         :row => row, :report_group_fields => report_group_fields, :group_fields => group_fields, 
-        :row_classes => row_classes, :this_row_group_class => this_row_group_class, :root_header => false %>
+        :row_classes => row_classes, :this_row_group_class => this_row_group_class, :root_header => false, :tree_map => tree_map  %>
     <%= render 'flex_reports/nested_rows', 
         :rows => row, :report_group_fields => report_group_fields, :group_fields => group_fields[1..-1], 
         :row_classes => next_level_row_group_classes, :tree_map => this_tree_map %>
     <%= render 'flex_reports/totals', 
         :row => row, :report_group_fields => report_group_fields, :group_fields => group_fields, 
-        :row_classes => row_classes %>
+        :row_classes => row_classes, :tree_map => tree_map %>
   <% end %>
 <% else %>  
   <% # innermost layer, render the data -%>
   <% rows.sort_by {|k,v| row_sort(k)}.each do |group_name, row| %>
     <%= render 'flex_reports/row', 
         :row => row, :report_group_fields => report_group_fields, :label => row.send(group_fields[0]), 
-        :row_classes => row_classes %>
+        :row_classes => row_classes, :tree_map => tree_map  %>
   <% end %>
 <% end %>
