--- a/app/views/flex_reports/_row.html.erb
+++ b/app/views/flex_reports/_row.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :tr, :class => (row_classes + ["data"]).join(' ') do %>
+<%= content_tag :tr, :class => (row_classes + ["data"] + ["level-#{tree_map.size}"]).join(' ') do %>
   <% (report_group_fields.size).times do %>
     <td class="indent">&nbsp;</td>
   <% end %>
