--- a/app/views/flex_reports/_report.html.erb
+++ b/app/views/flex_reports/_report.html.erb
@@ -5,12 +5,12 @@
       <% root_group_class = "row-group-0" %>
       <%= render 'flex_reports/group_header', 
           :row => results, :report_group_fields => group_fields, :group_fields => group_fields, 
-          :root_header => true, :row_classes => [], :this_row_group_class => root_group_class %>
+          :root_header => true, :row_classes => [], :this_row_group_class => root_group_class, :tree_map => [] %>
       <%= render "flex_reports/nested_rows", :rows => results, :report_group_fields => group_fields, 
           :group_fields => group_fields, :row_classes => [root_group_class], :tree_map => [0] %>
       <%= render 'flex_reports/totals', 
           :row=>results, :report_group_fields => group_fields, :group_fields=>group_fields, 
-          :grand_total => true, :row_classes => [] %>
+          :grand_total => true, :row_classes => [], :tree_map => [] %>
     </tbody>
   </table>
 </div>
