--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -140,7 +140,11 @@
         </li>
         <li>
           <%= f.label :provider %>
-          <%= f.select :provider_id, options_for_select(Provider.default_order.with_trip_data.map { |p| [p.name, p.id] }) %>
+          <%= f.select :provider_id, options_for_select([['<All Providers>','']] + Provider.default_order.with_trip_data.map { |p| [p.name, p.id] }) %>
+        </li>
+        <li>
+          <%= f.label :reporting_agency %>
+          <%= f.select :reporting_agency_id, options_for_select([['<All Reporting Agencies>','']] + Provider.default_order.with_trip_data_as_reporting_agency.map { |p| [p.name, p.id] }) %>
         </li>
       </ol>
       <input type="submit" name="report" value="Report">
