--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -83,7 +83,7 @@
 <div class="predefined-report" data-name="monthly">
   <%= form_for @query, :html => { :class => "run-report", :method => 'get' }, :url => { :action => :ride_purpose } do |f| %>
     <fieldset>
-      <h2 class="report-header">Ride Purpose Report</h2>
+      <h2 class="report-header">Trip Purpose Report</h2>
       <p></p>
       <ol>
         <li>
