--- a/app/views/predefined_reports/ride_purpose.html.erb
+++ b/app/views/predefined_reports/ride_purpose.html.erb
@@ -3,7 +3,7 @@
 <table id="purpose-results">
   <thead>
     <tr>
-      <th></th>
+      <th colspan="2"></th>
       <% for purpose in @trip_purposes %>
         <th class="data number"><%= purpose %></th>
       <% end %>
@@ -12,11 +12,12 @@
   <tbody>
     <% @results.keys.sort.each do |county| %>
       <tr>
-        <th class="contrast banner" colspan="<%= @trip_purposes.size + 1 %>"><%= county %> County</th>
+        <th class="contrast banner" colspan="<%= @trip_purposes.size + 2 %>"><%= county %> County</th>
       </tr>
   
       <% @results[county].keys.sort_by{|provider| provider.try(:name) || "Unspecified" }.each do |provider| %>
         <tr>
+          <td class="indent">&nbsp;</td>
           <th scope="row" class="text"><%= provider.try :name || "Unspecified" %></th>
           <% for purpose in @trip_purposes %>
             <td class="number"><%= number_with_delimiter(@results[county][provider].by_purpose[purpose]) %></td>
@@ -26,7 +27,7 @@
 
       <!-- totals -->
       <tr>
-        <th class="contrast text" scope="row"><%= county %> County Total</th>
+        <th class="contrast text" scope="row" colspan="2"><%= county %> County Total</th>
         <% total = RidePurposeRow.sum(@results[county]) %>
         <% for purpose in @trip_purposes %>
           <td class="number"><%= number_with_delimiter(total.by_purpose[purpose]) %></td>
@@ -36,7 +37,7 @@
       <!-- percentages -->
       <tr>
         <% percentages = total.percentages %>
-        <th scope="row" class="text">% of total county trips</th>
+        <th scope="row" class="text" colspan="2">% of total county trips</th>
         <% for purpose in @trip_purposes %>
           <td class="number"><%= "%.1f\%" % percentages[purpose] %></td>
         <% end %>
@@ -46,11 +47,11 @@
   </tbody>
   <tbody class="totals">
     <tr>
-      <th class="contrast banner" colspan="<%= @trip_purposes.size + 1 %>">All Trips</th>
+      <th class="contrast banner" colspan="<%= @trip_purposes.size + 2 %>">All Trips</th>
     </tr>
     <!-- grand totals -->
     <tr>
-      <th class="contrast text" scope="row">Grand Total</th>
+      <th class="contrast text" scope="row" colspan="2">Grand Total</th>
       <% total = RidePurposeRow.sum(@results) %>
       <% for purpose in @trip_purposes %>
         <td class="number"><%= number_with_delimiter(total.by_purpose[purpose]) %></td>
@@ -60,7 +61,7 @@
     <!-- grand total percentages -->
     <tr>
       <% percentages = total.percentages %>
-      <th scope="row" class="text">% of total trips</th>
+      <th scope="row" class="text" colspan="2">% of total trips</th>
       <% for purpose in @trip_purposes %>
         <td class="number"><%= "%.1f\%" % percentages[purpose] %></td>
       <% end %>
