--- a/app/views/trips/_search.html.erb
+++ b/app/views/trips/_search.html.erb
@@ -41,6 +41,10 @@
         <%= f.label :result_code, "Result Code:" %> 
         <%= f.select :result_code, @result_codes, :include_blank => true %>
       </li>
+      <li>
+        <%= f.label :original_override, "Original Override Contains:" %> 
+        <%= f.text_field :original_override %>
+      </li>
     </ol>
 
     <div class="actions">
