Break funding source into its own model

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -7,6 +7,7 @@
   <li><%= link_to "Programs", :controller => "programs" %></li>
   <li><%= link_to "Providers", :controller => "providers" %></li>
   <li><%= link_to "F.E. Projects", :controller => "projects" %></li>
+  <li><%= link_to "Funding Sources", :controller => "funding_sources" %></li>
   <li><%= link_to "RouteMatch Overrides", :controller => "overrides" %></li>
   <li><%= link_to "TriMet Providers", :controller => "trimet_providers" %></li>
   <li><%= link_to "TriMet Programs", :controller => "trimet_programs" %></li>
