Fixes needed now that funding sources are
in their own table

--- a/app/views/trips/_trips.html.erb
+++ b/app/views/trips/_trips.html.erb
@@ -25,7 +25,7 @@
             <td><%= trip.date %></td>
             <td><%= Trip::RESULT_CODES.invert[trip.result_code] %></td>
             <td><%= trip.allocation.provider.name if trip.allocation.provider %></td>
-            <td><%= trip.allocation.project.funding_source if trip.allocation.project %></td>
+            <td><%= trip.allocation.project.funding_source.try(:name) if trip.allocation.project %></td>
             <td><%= raw gmaps_address_link trip.pickup_address, "trip-pickup" %></td>
             <td><%= raw gmaps_address_link trip.dropoff_address, "trip-dropoff" %></td>
             <td><%= raw gmaps_route_link trip.pickup_address, trip.dropoff_address, "" %></td>
