Cleanup - Rename some objects
Move ride_purpose to trip_purpose, RidePurpose to TripPurpose to match
with the report's actual name.

--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -81,7 +81,7 @@
 </div>
 
 <div class="predefined-report" data-name="monthly">
-  <%= form_for @query, :html => { :class => "run-report", :method => 'get' }, :url => { :action => :ride_purpose } do |f| %>
+  <%= form_for @query, :html => { :class => "run-report", :method => 'get' }, :url => { :action => :trip_purpose } do |f| %>
     <fieldset>
       <h2 class="report-header">Trip Purpose Report</h2>
       <p></p>
