--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -129,6 +129,30 @@
 </div>
 
 <div class="predefined-report" data-name="monthly">
+  <%= form_for @semimonth_query, :html => { :class => "run-report", :method => 'get' }, :url => { :action => :bpa_invoice } do |f| %>
+    <fieldset>
+      <h2 class="report-header">BPA Invoice</h2>
+      <p></p>
+      <ol>
+        <li>
+          <%= f.label :start_date %>
+          <%= f.text_field :start_date, :class => "datepicker", :placeholder => "yyyy-mm-dd", :id => :bpa_invoice_start_date, :required => :required %>
+        </li>
+        <li>
+          <%= f.label :end_date %>
+          <%= f.text_field :end_date, :class => "datepicker", :placeholder => "yyyy-mm-dd", :id => :bpa_invoice_end_date, :required => :required %>
+        </li>
+        <li>
+          <%= f.label :provider_id, 'Provider' %>
+          <%= f.select :provider_id, options_for_select(Provider.bpa_providers.default_order.all.map { |p| [p.name, p.id] }) %>
+        </li>
+      </ol>
+      <input type="submit" name="report" value="Report">
+    </fieldset>
+  <% end %>
+</div>
+
+<div class="predefined-report" data-name="monthly">
   <%= form_for @query, :html => { :class => "run-report", :method => 'get' }, :url => { :action => :age_and_ethnicity } do |f| %>
     <fieldset>
       <h2 class="report-header">Age & Ethnicity Report</h2>
