--- a/app/views/flex_reports/_totals.html.erb
+++ b/app/views/flex_reports/_totals.html.erb
@@ -1,6 +1,7 @@
 <% short_name = short_group_name(row,group_fields) %>
 <% row = ReportRow.sum(row, nil, @report.fields) %>
 <% totals_class = (group_fields.size >= 3 || (defined?(grand_total) && grand_total)) ? "sum-totals" : "totals" %>
+<% currency_precision = 0 if currency_precision.nil? %>
 <%= content_tag :tr, :class => "#{row_classes.join(' ')} #{totals_class} level-#{tree_map.size}"  do %>
   <% if defined?(total_label) %>
     <%= content_tag :td, :colspan => group_fields.size + 1 do %>
@@ -25,37 +26,37 @@
   <% end %>
   <% if @report.fields.include? 'funds' %>
     <td class="number">
-      <%= number_to_currency(row.funds, :precision => 0, :negative_format => "(%u%n)") %>
+      <%= number_to_currency(row.funds, :precision => currency_precision, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'agency_other' %>
     <td class="number">
-      <%= number_to_currency(row.agency_other, :precision => 0, :negative_format => "(%u%n)") %>
+      <%= number_to_currency(row.agency_other, :precision => currency_precision, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'vehicle_maint' %>
     <td class="number">
-      <%= number_to_currency(row.vehicle_maint, :precision => 0, :negative_format => "(%u%n)") %>
+      <%= number_to_currency(row.vehicle_maint, :precision => currency_precision, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'administrative' %>
     <td class="number">
-      <%= number_to_currency(row.administrative, :precision => 0, :negative_format => "(%u%n)") %>
+      <%= number_to_currency(row.administrative, :precision => currency_precision, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'operations' %>
     <td class="number">
-      <%= number_to_currency(row.operations, :precision => 0, :negative_format => "(%u%n)") %>
+      <%= number_to_currency(row.operations, :precision => currency_precision, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'donations' %>
     <td class="number">
-      <%= number_to_currency(row.donations, :precision => 0, :negative_format => "(%u%n)") %>
+      <%= number_to_currency(row.donations, :precision => currency_precision, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'total' %>
     <td class="number">
-      <%= number_to_currency(row.total, :precision => 0, :negative_format => "(%u%n)") %>
+      <%= number_to_currency(row.total, :precision => currency_precision, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'in_district_trips' %>
