--- a/app/views/flex_reports/_simple_header.html.erb
+++ b/app/views/flex_reports/_simple_header.html.erb
@@ -33,5 +33,8 @@
     <% if rf.include? 'escort_volunteer_hours' %><th class="wrap number">Escort Volunteer Hours</th><% end %>
     <% if rf.include? 'admin_volunteer_hours' %><th class="wrap number">Admin Volunteer Hours</th><% end %>
     <% if rf.include? 'total_volunteer_hours' %><th class="wrap number">Total Volunteer Hours</th><% end %>
+    <th class="no-print">
+      Details
+    </th>
   </tr>
 </thead>
