--- a/app/views/flex_reports/_row.html.erb
+++ b/app/views/flex_reports/_row.html.erb
@@ -147,4 +147,8 @@
       <%= number_with_precision(row.total_volunteer_hours, :precision => 1, :delimiter => ",") %>
     </td>
   <% end %>
+  <td class="no-print">
+    <%= row_trip_link @report, row %>
+    <%= row_summary_link @report, row %>
+  </td>
 <% end %>
