--- a/app/views/trips/_search.html.erb
+++ b/app/views/trips/_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @query, :html=>{:id=>"trip-filter", :method=>:get}, :url=>{:action=>:list} do |f| %>
+<%= form_for @query, :as => :q, :html=>{:id=>"trip-filter", :method=>:get}, :url=>{:action=>:list} do |f| %>
   <fieldset>
     <ol class="section first">
       <li>
@@ -35,7 +35,13 @@
       </li>
       <li>
         <%= f.label :allocation, "Allocation:" %> 
-        <%= f.grouped_collection_select :allocation, Provider.default_order.includes(:allocations).all, :allocations, :name, :id, :select_label, :include_blank => true %>
+        <% if @query.allocation_ids.present? %>
+          <%= f.collection_select :allocation, Allocation.order(:name).where(:id => @query.allocation_ids), 
+              :id, :name, :include_blank => true %>
+        <% else %>
+          <%= f.grouped_collection_select :allocation, Provider.default_order.includes(:allocations).all, 
+              :allocations, :name, :id, :select_label, :include_blank => true %>
+        <% end %>
       </li>
       <li>
         <%= f.label :result_code, "Result Code:" %> 
@@ -44,8 +50,20 @@
       <li>
         <%= f.label :original_override, "Original Override Contains:" %> 
         <%= f.text_field :original_override %>
+        <%= f.hidden_field :allocation_id_list %>
       </li>
     </ol>
+    <ul class="search-scope">
+      <% if @query.allocation_ids.present? %>
+        <h2>This search is limited to the following allocations:</h2>
+        <% @query.allocation_ids.sort_by{|a_id| @allocations.detect{|a| a.id == a_id}.name}.each do |a_id| %>
+          <% this_allocation = @allocations.detect{|a| a.id == a_id} %>
+          <li>
+            <%= link_to this_allocation.name, edit_allocation_url(this_allocation) %> 
+          </li>
+        <% end %>
+      <% end %>
+    </ul>
 
     <div class="actions">
       <%= f.submit "Search", :id => "trip-search" %>
