--- a/public/stylesheets/print.css
+++ b/public/stylesheets/print.css
@@ -147,7 +147,7 @@ div.report-wrapper td.indent {
  * Predefined Reports
  *
  */
-body.ride-purpose th.data {
+body.trip-purpose th.data {
   width: 8%;
 }
 
