Bring some consistency to date handling
in Flex Reports. after_end_date is now the convention for all end dates
that are used for querying, and end_date is the date presented to the
user. after_end_date is end_date + 1 day.

--- a/app/views/flex_reports/show.html.erb
+++ b/app/views/flex_reports/show.html.erb
@@ -4,7 +4,7 @@
 
 <div id="date-header">
   <span class="month-range">
-    <%= report_month_range @report.start_date, @report.query_end_date %>
+    <%= report_month_range @report.start_date, @report.query_after_end_date %>
   </span>
   <span class="separator no-print">|</span>
   <%= link_to "CSV", params.merge({:format=>:csv}), :class=>"csv" %>
