--- a/app/views/predefined_reports/quarterly_narrative.html.erb
+++ b/app/views/predefined_reports/quarterly_narrative.html.erb
@@ -8,7 +8,7 @@
       <% allocation = get_row(county_rows).allocation %>
       <h2>
         <%= allocation.reporting_agency_name %> &mdash; 
-        <%= describe_date_range(@report.start_date, @report.end_date + 1.month - 1.day) %>
+        <%= report_month_range(@report.start_date, @report.query_after_end_date) %>
       </h2>
       <h3>Program: <%= allocation.program.try(:name) || "Unspecified Program" %></h3>
       <h3>County: <%= allocation.county || "Unspecified County" %></h3>
