Flex reports: continued rationalization
of end_date handling

--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -115,8 +115,8 @@
           <%= f.date_select :start_date, :start_year => 2012, :end_year => Time.now.year, :order=>[:month,:year] %>
         </li>
         <li>
-          <%= f.label :end_date %>
-          <%= f.date_select :end_date, :start_year => 2012, :end_year => Time.now.year, :order=>[:month,:year] %>
+          <%= f.label :end_month, "End date" %>
+          <%= f.date_select :end_month, :start_year => 2012, :end_year => Time.now.year, :order=>[:month,:year] %>
         </li>
         <li>
           <%= f.label :provider_id, 'Reporting Agency' %>
