--- a/app/views/predefined_reports/bpa_invoice_details.html.erb
+++ b/app/views/predefined_reports/bpa_invoice_details.html.erb
@@ -30,24 +30,32 @@
       <% @trips.each do |trip| %>
         <tr>
           <td><%= trip.date.to_s(:mdy) %></td>
-          <td><%= trip.customer.first_name %></td>
-          <td><%= trip.customer.last_name %></td>
-          <td><%= trip.start_at.to_s(:time_only) %></td>
-          <td><%= trip.end_at.to_s(:time_only) %></td>
-          <td><%= seconds_to_hours_colon_minutes_colon_seconds(trip.apportioned_duration) %></td>
-          <td class="number"><%= trip.apportioned_mileage %></td>
+          <td class="nobreak"><%= trip.customer.first_name %></td>
+          <td class="nobreak"><%= trip.customer.last_name %></td>
+          <td class="nobreak"><%= trip.start_at.to_s(:time_only) %></td>
+          <td class="nobreak"><%= trip.end_at.to_s(:time_only) %></td>
+          <td class="number"><%= seconds_to_hours_colon_minutes_colon_seconds(trip.apportioned_duration) %></td>
+          <td class="number"><%= number_with_precision(trip.apportioned_mileage, :precision => 2) %></td>
           <td class="number"><%= number_to_currency(trip.apportioned_fare) %></td>
-          <td><%= trip.customers_served %></td>
+          <td class="number"><%= trip.customers_served %></td>
           <td><%= trip.routematch_share_id %></td>
           <td><%= trip.routematch_share_id.present? ? "Shared" : "Indiv" %></td>
           <td><%= trip.try(:allocation).try(:project).try(:project_number) %></td>
-          <td><%= trip.try(:allocation).try(:project).try(:name) %></td>
-          <td><%= trip.try(:allocation).try(:override).try(:name) %></td>
+          <td class="nobreak"><%= trip.try(:allocation).try(:project).try(:name) %></td>
+          <td class="nobreak"><%= trip.try(:allocation).try(:override).try(:name) %></td>
           <td class="no-print">
             <%= link_to "Details", {:controller => :trips, :action=>:show, :id=>trip.id}, {:title=>"View details for this trip", :class => :details} %>
           </td>
         </tr>
       <% end %>
+      <tr>
+        <td colspan="5" class="number">Total:</td>
+        <td class="number"><%= seconds_to_hours_colon_minutes_colon_seconds(@total_apportioned_duration) %></td>
+        <td class="number"><%= number_with_precision(@total_apportioned_mileage, :precision => 2, :delimiter => ",") %></td>
+        <td class="number"><%= number_to_currency(@total_apportioned_fare) %></td>
+        <td class="number"><%= number_with_delimiter(@total_customers_served) %></td>
+        <td colspan="6"></td>
+      </tr>
     </tbody>
   </table>
 </div>
