BPA Invoice Details: tweak column headings

--- a/app/views/predefined_reports/bpa_invoice_details.html.erb
+++ b/app/views/predefined_reports/bpa_invoice_details.html.erb
@@ -9,21 +9,24 @@
   <table id="trip-results">
     <thead>
       <tr>
-        <th>Trip Date</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Start Time</th>
-        <th>End Time</th>
-        <th>Apportioned Hours</th>
-        <th>Apportioned Miles</th>
-        <th>Apportioned Amount</th>
-        <th>Total Trips</th>
-        <th>Share ID</th>
-        <th>Type</th>
-        <th>Project #</th>
-        <th>F.E. Project Name</th>
-        <th>RouteMatch Override</th>
-        <th class="no-print"></th>
+        <th rowspan="2">Trip Date</th>
+        <th rowspan="2">First Name</th>
+        <th rowspan="2">Last Name</th>
+        <th rowspan="2">Start Time</th>
+        <th rowspan="2">End Time</th>
+        <th colspan="3" class="column-group">Apportioned Amounts</th>
+        <th rowspan="2" class="number">Total Trips</th>
+        <th rowspan="2">Share ID</th>
+        <th rowspan="2">Type</th>
+        <th rowspan="2">Project #</th>
+        <th rowspan="2">F.E. Project Name</th>
+        <th rowspan="2">RouteMatch Override</th>
+        <th rowspan="2" class="no-print"></th>
+      </tr>
+      <tr>
+        <th class="number">Hours</th>
+        <th class="number">Miles</th>
+        <th class="number">Amount</th>
       </tr>
     </thead>
     <tbody>
